--- a/app/src/main/res/layout/fragment_list_review.xml
+++ b/app/src/main/res/layout/fragment_list_review.xml
@@ -120,6 +120,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/sort_review_like_iv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/iv_sort_inactive"
@@ -128,6 +129,7 @@
 
                 <TextView
                     style="@style/Body3"
+                    android:id="@+id/sort_review_like_tv"
                     android:textColor="@color/gray_scale8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -145,6 +147,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/sort_review_latest_iv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/iv_sort_inactive"
@@ -152,6 +155,7 @@
                     android:layout_marginTop="22dp"/>
 
                 <TextView
+                    android:id="@+id/sort_review_latest_tv"
                     style="@style/Body4"
                     android:textColor="@color/gray_scale6"
                     android:layout_width="wrap_content"
