--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -58,6 +58,20 @@
         app:layout_constraintTop_toBottomOf="@id/iv_profile"
         />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="content"
+        style="@style/Body2"
+        android:layout_marginTop="11dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_star_total"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:textColor="@color/gray_scale7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
     <ImageView
         android:id="@+id/iv_recommend_review"
         android:layout_width="wrap_content"
