--- a/app/src/main/res/layout/fragment_list_info.xml
+++ b/app/src/main/res/layout/fragment_list_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/fragment_list_info"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,15 +9,13 @@
 
 
 
-
-    <ImageView
-        android:layout_width="320dp"
+    <com.kakao.vectormap.MapView
+        android:id="@+id/map_view"
+        android:layout_width="match_parent"
         android:layout_height="186dp"
-        android:src="@drawable/ic_star"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"/>
-
-
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
